--- a/backend/env.example
+++ b/backend/env.example
@@ -19,9 +19,23 @@ UPLOAD_PATH=./uploads
 
 # AI Configuration - OpenAI
 OPENAI_API_KEY=your_openai_api_key_here
-AI_MODEL=gpt-4-turbo-2024-04-09
+OPENAI_MODEL=gpt-4o-mini
 AI_MAX_TOKENS=1000
 AI_TEMPERATURE=0.3
+
+# AI Configuration - Gemini
+GEMINI_API_KEY=your_gemini_api_key_here
+GEMINI_MODEL=gemini-1.5-flash
+
+# AI Provider Settings
+DEFAULT_AI_PROVIDER=openai
+AI_FALLBACK_ENABLED=true
+AI_TIMEOUT=120000
+AI_RETRY_ATTEMPTS=2
+
+# Admin Panel Authentication
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=your_secure_admin_password_here
 
 # Cache Configuration
 ENABLE_CACHE=true
@@ -36,6 +50,8 @@ RATE_LIMIT_MAX_REQUESTS=100
 # 1. Copy this file to .env
 # 2. Replace all placeholder values with your actual configuration
 # 3. Get OpenAI API key from: https://platform.openai.com/api-keys
-# 4. Set up your MySQL database and update DB_* variables
-# 5. Generate a strong JWT_SECRET (at least 32 characters)
-# 6. Update FRONTEND_URL to match your React Native app URL 
+# 4. Get Gemini API key from: https://ai.google.dev/
+# 5. Set up your MySQL database and update DB_* variables
+# 6. Generate a strong JWT_SECRET (at least 32 characters)
+# 7. Set secure ADMIN_USERNAME and ADMIN_PASSWORD for AI admin panel
+# 8. Update FRONTEND_URL to match your React Native app URL 
